--- a/src/app/pages/forms/buttons/buttons.component.html
+++ b/src/app/pages/forms/buttons/buttons.component.html
@@ -3,7 +3,16 @@
     <nb-card>
       <nb-card-header>PDFViewer</nb-card-header>
       <nb-card-body>
-        <pdf-viewer [src]="pdfSrc" [render-text]="true" style="display: block;"></pdf-viewer>
+        <a [href]="pdfSrc" target="_blank">Download</a>
+        <button (click)="showall=!showall">Toogle</button>
+        <button (click)="printPDF()" [disabled]='showall'>Print</button>
+        <div id="pdfdiv">
+          <pdf-viewer id="pdfviewer" [src]="pdfSrc" [show-all]="showall" [render-text]="true" style="display: block;">
+          </pdf-viewer>
+        </div>
+        <canvas id="canvasCombine" style="border:1px; width: 100vw; height: 100vh"></canvas>
+
+
       </nb-card-body>
     </nb-card>
   </div>
